Better colorisation for dark & light UI
Please also use ; to end a css rule.

--- a/styles/weather-package.less
+++ b/styles/weather-package.less
@@ -5,17 +5,17 @@
 @import "ui-variables";
 
 .weather-package {
-  right: 20%
+  right: 20%;
 }
 
 #city {
-  color: white
+  color: rgb(177, 163, 148);
 }
 
 #pressure {
-  color: green
+  color: darken(green, 10%);
 }
 
 #temp {
-  color: red
+  color: darken(red, 10%);
 }
